# claseMreporeto

./: .dockerignore  .gitignore  .gitkeep  Dockerfile  LICENSE  README.md  main.py  pyproject.toml
data/: .gitkeep
models/: modelosahacer.txt  prophet_model.pkl  prophet_modelInghab.pkl  prophet_modelTocu.pkl  prophet_model_num_adu_173.pkl  prophet_model_num_adu_253.pkl  prophet_model_num_adu_294.pkl  prophet_model_num_adu_48.pkl  prophet_model_num_adu_5.pkl  prophet_model_numadu_173.pkl  prophet_model_numadu_253.pkl  prophet_model_numadu_294.pkl  prophet_model_numadu_48.pkl  prophet_model_numadu_5.pkl
notebooks/: Notebook2_DataAnalysis_TocEdos.ipynb  Notebook2_ExploringModels.ipynb  Notebook3_CreacionModelos.ipynb  Notebook3_TS_inghab_Tocu.ipynb  Notebook3_TS_oc_Tocu.ipynb  Notebook3_TS_oc_Tres.ipynb  Notebook4_MultipleTS_nadu.ipynb
src/: app.py  class_request.py  ocupaciones_time_series (1).xlsx  ocupaciones_time_series_by_empresa (1).xlsx  ocupaciones_time_series_nueva (1).csv
src/apis/: Dockerfile  app.py  pyproject.toml
src/apis/utils/: __init__.py  classes_requests.py
src/loadmlflow/: test.py  testTablaOcupaciones.py  testTablaOcupacionesPorEdo.py
src/webapp/: app.py
src/webapp/config/: constants.py
src/webapp/pages/: dashboard.py  predictions.py
src/webapp/utils/: functions.py
utils/: app.py
