[project]
name = "clasemreporeto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "numpy>=2.1.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "prophet>=1.1.6",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "setuptools>=80.7.1",
    "ydata-profiling>=4.16.1",
]
