[project]
name = "clasemreporeto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "mlflow>=2.22.0",
    "nbformat>=5.10.4",
    "numpy>=2.1.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=6.1.1",
    "prophet>=1.1.6",
    "pydantic>=2.11.4",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "setuptools>=80.7.1",
    "statsmodels>=0.14.4",
    "uvicorn>=0.34.2",
    "ydata-profiling>=4.16.1",
]
